--- a/FtcCommon/build.gradle
+++ b/FtcCommon/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation project(':Hardware')
     implementation project(':Inspection')
     implementation project(':RobotCore')
+    implementation project(':RobotServer')
 
     turboImplementation project(':RobotServer')
     //turboImplementation project(':OpenRC')
