--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -15,4 +15,8 @@
 apply from: '../build.common.gradle'
 dependencies {
     implementation 'org.openftc:rev-extensions-2:1.2'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.3.4'
+    implementation 'com.acmerobotics.roadrunner:core:0.4.5'
+
+    implementation project(':FtcRobotController')
 }
