--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {url 'https://jitpack.io'}
+        maven {url 'https://dl.bintray.com/openftc/maven'}
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
